--- a/.github/workflows/console-e2e.yml
+++ b/.github/workflows/console-e2e.yml
@@ -238,9 +238,9 @@ jobs:
           name: "build-files"
       - name: Unzip build artifacts
         run: unzip -o build.zip
-      - name: Install FF 115.7.0 ESR
+      - name: Install FF 129.0
         run: |
-          wget --no-verbose -O /tmp/firefox.tar.bz2 https://download-installer.cdn.mozilla.net/pub/firefox/releases/115.7.0esr/linux-x86_64/en-US/firefox-115.7.0esr.tar.bz2
+          wget --no-verbose -O /tmp/firefox.tar.bz2 https://download-installer.cdn.mozilla.net/pub/firefox/releases/129.0/linux-x86_64/en-US/firefox-129.0.tar.bz2
           tar -C /opt -xjf /tmp/firefox.tar.bz2
           rm /tmp/firefox.tar.bz2
           sudo ln -fs /opt/firefox/firefox /usr/bin/firefox
