--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,6 @@ services:
       - POSTGRES_DB=ttn_lorawan_dev
     volumes:
       - ${DEV_DATA_DIR:-.env/data}/postgres:/var/lib/postgresql/data
-      - .env/cache:/var/lib/ttn-lorawan/cache
     ports:
       - "127.0.0.1:5432:5432"
 
@@ -33,42 +32,19 @@ services:
     volumes:
       - ./blob:/srv/ttn-lorawan/public/blob
       - ./config/stack:/config:ro
-      # If using Let's Encrypt:
-      # - ./acme:/var/lib/acme
-    environment:
-      TTN_LW_BLOB_LOCAL_DIRECTORY: /srv/ttn-lorawan/public/blob
-      TTN_LW_REDIS_ADDRESS: redis:6379
-      TTN_LW_IS_DATABASE_URI: postgres://root:root@postgres:5432/ttn_lorawan_dev?sslmode=disable
+    env_file:
+      - .env/ttn-lw-stack.env
     ports:
-      # If deploying on a public server:
-      # - "80:1885"
-      # - "443:8885"
-      - "1881:1881"
-      - "8881:8881"
-      - "1882:1882"
-      - "8882:8882"
-      - "1883:1883"
-      - "8883:8883"
-      - "1884:1884"
-      - "8884:8884"
-      - "1885:1885"
-      - "8885:8885"
-      - "1887:1887"
-      - "8887:8887"
-      - "1700:1700/udp"
-    # If using custom certificates:
-    secrets:
-      - ca.pem
-      - cert.pem
-      - key.pem
-    extra_hosts:
-      - "host.docker.internal:host-gateway"
-
-# If using custom certificates:
-secrets:
-  ca.pem:
-    file: ./ca.pem
-  cert.pem:
-    file: ./cert.pem
-  key.pem:
-    file: ./key.pem
+      - "0.0.0.0:1881:1881"
+      - "0.0.0.0:1882:1882"
+      - "0.0.0.0:1883:1883"
+      - "0.0.0.0:1884:1884"
+      - "0.0.0.0:1885:1885"
+      - "0.0.0.0:1887:1887"
+      - "0.0.0.0:8881:8881"
+      - "0.0.0.0:8882:8882"
+      - "0.0.0.0:8883:8883"
+      - "0.0.0.0:8884:8884"
+      - "0.0.0.0:8885:8885"
+      - "0.0.0.0:8887:8887"
+      - "0.0.0.0:1700:1700/udp"
